# mosai_art

./: .gitignore  README.md  flake.nix  license  pyproject.toml
mosaic_art/: main.py
